--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
     "bugs": {
         "url": "https://github.com/HanSolo/discoextension/issues"
     },
-    "icon": "https://github.com/HanSolo/discoextension/discoduke.png"
+    "icon": "discoduke.png"
 }
