--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "disco",
     "displayName": "disco",
     "description": "",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "publisher": "GerritGrunwald",
     "engines": {
         "vscode": "^1.23.0"
@@ -11,7 +11,7 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.disco"        
+        "onCommand:extension.disco"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -43,7 +43,12 @@
         "type": "git",
         "url": "https://github.com/HanSolo/discoextension"
     },
-    "keywords": ["disco", "discoapi", "JDK", "OpenJDK"],
+    "keywords": [
+        "disco",
+        "discoapi",
+        "JDK",
+        "OpenJDK"
+    ],
     "author": "Gerrit Grunwald <ggrunwald@azul.com>",
     "license": "Apache 2.0",
     "bugs": {
